
\item A \code{train} bug was fixed for the \code{rrlda} model (found
by Tiago Branquinho Oliveira).

\item The \code{extraTrees} model in the \cpkg{extraTrees} package was
added.

\item The \code{kknn.train} model in the \cpkg{kknn} package was
added.

\item A bug was fixed in \code{lrFuncs} where the class threshold was
improperly set (thanks to David Meyer).

\item A bug related to new verions of the \cpkg{gbm} package were fixed.

}
}

\section{Changes in version 5.15-60}{
\itemize{ 

\item A bug in \code{predictors.earth}, discovered by Katrina Bennett,
was fixed.

\item A bug induced by version 5.15-052 for the bootstrap 632 rule was
fixed.

\item The DESCRIPTION file as of 5.15-048 should have used a
version-specific lattice dependency.

\item \code{lift} can compute gain and lift charts (and defaults to
gain)

\item The \cpkg{gbm} model was updated to handle 3 or more classes. 

\item For bagged trees using \cpkg{ipred}, the code in \code{train}
defaults to \code{keepX = FALSE} to save space. Pass in \code{keepX =
TRUE} to use out-of-bag sampling for this model.

\item Changes were made to support vector machines for classification
models due to bugs with class probabilities in the latest version of
\cpkg{kernlab}. The \code{prob.model} will default to the value of
\code{classProbs} in the \code{trControl} function. If
\code{prob.model} is passed in as an argument to \code{train}, this
specification over-rides the default. In other words, to avoid
generating a probability model, set either \code{classProbs = FALSE}
or \code{prob.model = FALSE}. 

}
}

\section{Changes in version 5.15-052}{
\itemize{ 

\item Added \code{bayesglm} from the \cpkg{arm} package. 

\item A few bugs were fixed in \code{bag}, thanks to Keith
Woolner. Most notably, out-of-bag estimates are now computed when the
prediction function includes a column called \code{pred}.

\item Parallel processing was implemented in \code{bag} and